food truck schedule netsci
food truck schedule netsci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6756,7 +6756,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-08T23:08:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6915,11 +6915,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bXAwSLjliI5k
-								Ni7QnvB7tw==
+								l9gmc50xIWbB
+								j/6EMxG0hA==
 								</data>
 								<key>Size</key>
-								<integer>164321</integer>
+								<integer>168083</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6935,11 +6935,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jcFlrnKIzBoj
-								NTiGyhNxDw==
+								TmApyiiS7qJn
+								Ax+4cVVfaQ==
 								</data>
 								<key>Size</key>
-								<integer>88362</integer>
+								<integer>92794</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T19:44:27Z</date>
+						<date>2019-01-08T23:08:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7731,11 +7731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AFSIwqLhp3mQ
-								UHEfrgAzAw==
+								ztlj8YuZjnWI
+								zP4eUF1NmQ==
 								</data>
 								<key>Size</key>
-								<integer>331585</integer>
+								<integer>337076</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AfWmIu3ole9O
-								lMowsPwOHA==
+								NDooww1nVzGx
+								v5wtOrLlkQ==
 								</data>
 								<key>Size</key>
-								<integer>247702</integer>
+								<integer>256240</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11270,7 +11270,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T22:44:49Z</date>
+						<date>2019-01-08T23:08:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11319,11 +11319,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FGUnDEljUw2j
-								Xt426LI2dw==
+								PLcHU20TnkxE
+								lBVDM2w+9w==
 								</data>
 								<key>Size</key>
-								<integer>4708</integer>
+								<integer>4644</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11372,7 +11372,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T22:44:49Z</date>
+						<date>2019-01-08T23:08:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12411,11 +12411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qdobDBOuY4yd
-								6pHbBIve2w==
+								850ultq89Zoz
+								a0PftS6Cbg==
 								</data>
 								<key>Size</key>
-								<integer>4178</integer>
+								<integer>3475</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12479,8 +12479,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDyr7PP
-				xuOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDysoBl
+				bTuAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12490,7 +12490,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDyr7PPyc2A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDysoBlcGmA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
