--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-08T23:08:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bXAwSLjliI5k
-								Ni7QnvB7tw==
+								l9gmc50xIWbB
+								j/6EMxG0hA==
 								</data>
 								<key>Size</key>
-								<integer>164321</integer>
+								<integer>168083</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jcFlrnKIzBoj
-								NTiGyhNxDw==
+								TmApyiiS7qJn
+								Ax+4cVVfaQ==
 								</data>
 								<key>Size</key>
-								<integer>88362</integer>
+								<integer>92794</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
