--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T19:44:27Z</date>
+						<date>2019-01-08T23:08:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -814,11 +814,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AFSIwqLhp3mQ
-								UHEfrgAzAw==
+								ztlj8YuZjnWI
+								zP4eUF1NmQ==
 								</data>
 								<key>Size</key>
-								<integer>331585</integer>
+								<integer>337076</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AfWmIu3ole9O
-								lMowsPwOHA==
+								NDooww1nVzGx
+								v5wtOrLlkQ==
 								</data>
 								<key>Size</key>
-								<integer>247702</integer>
+								<integer>256240</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
