updated PC NetSci
updated PC NetSci

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T19:44:27Z</date>
+						<date>2019-01-09T19:14:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ho4ce9ztXypN
-								gQallQNRfQ==
+								VxkGsiW6pn9q
+								n1Wn7Ga2NQ==
 								</data>
 								<key>Size</key>
-								<integer>139690</integer>
+								<integer>139977</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
