--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T23:08:39Z</date>
+						<date>2019-01-09T19:14:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NDooww1nVzGx
-								v5wtOrLlkQ==
+								Qoczk53X3d/K
+								O/6Lg4NSow==
 								</data>
 								<key>Size</key>
-								<integer>256240</integer>
+								<integer>256533</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
