--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -28,19 +28,19 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.5</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T22:41:16Z</date>
+						<date>2019-01-11T00:22:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_112552.jpg</key>
+							<key>files/backgroundImage_pp113009_n18_n1.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jihq6+Elz8LV
-								1MFztn2XpQ==
+								jtntMzRdk7tW
+								j8REWAmHvQ==
 								</data>
 								<key>Size</key>
-								<integer>148046</integer>
+								<integer>148558</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								99dWDCEi9Wtp
-								fD/E0Gaf4A==
+								Zou4kHO9bguA
+								Ai0XPUEL1Q==
 								</data>
 								<key>Size</key>
-								<integer>75371</integer>
+								<integer>75995</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
