--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/6-NetSci-Young-Initiative-for-Satellite-Meeting/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/6-NetSci-Young-Initiative-for-Satellite-Meeting/Contents.plist
@@ -28,19 +28,19 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.5</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-11T00:22:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110327.jpg</key>
+							<key>files/backgroundImage_pp110361_n18_n1.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mxsh55/9IW+S
-								AsZdCwb0nw==
+								FbQBPxebCyYI
+								TUV5c6eQWA==
 								</data>
 								<key>Size</key>
-								<integer>112975</integer>
+								<integer>113487</integer>
 							</dict>
 							<key>files/stacks_page_page73.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OjK46FBJbia3
-								bkQXaIlxkA==
+								7wrstBJVccC7
+								u3wgo09oXg==
 								</data>
 								<key>Size</key>
-								<integer>49614</integer>
+								<integer>50238</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
