--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -28,19 +28,19 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.5</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-09T19:14:41Z</date>
+						<date>2019-01-11T00:22:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110808.jpg</key>
+							<key>files/backgroundImage_pp111153_n18_n1.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F+/oC6SIhtx3
-								UgqwPlCZbg==
+								Cqm22a6FxHii
+								P2B+TOm0/A==
 								</data>
 								<key>Size</key>
-								<integer>207884</integer>
+								<integer>208396</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VxkGsiW6pn9q
-								n1Wn7Ga2NQ==
+								Wz+WyZQ5stjd
+								SjL5/NCLpA==
 								</data>
 								<key>Size</key>
-								<integer>139977</integer>
+								<integer>141017</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
