--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -28,19 +28,19 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.5</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-09T19:14:41Z</date>
+						<date>2019-01-11T00:22:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_109967.jpg</key>
+							<key>files/backgroundImage_pp114270_n18_n1.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -814,11 +814,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ztlj8YuZjnWI
-								zP4eUF1NmQ==
+								pje33G5zom1o
+								stIomE+fZA==
 								</data>
 								<key>Size</key>
-								<integer>337076</integer>
+								<integer>338759</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Qoczk53X3d/K
-								O/6Lg4NSow==
+								oPow0JgamUpf
+								U8yo3CtFVw==
 								</data>
 								<key>Size</key>
-								<integer>256533</integer>
+								<integer>258007</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
