updated for grace period NetSci
updated for grace period NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-11T15:34:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oPow0JgamUpf
-								U8yo3CtFVw==
+								zaZWwyW5Q7F5
+								b9+XwPPKxA==
 								</data>
 								<key>Size</key>
-								<integer>258007</integer>
+								<integer>258174</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7884,7 +7884,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-11T15:34:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8003,11 +8003,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Zou4kHO9bguA
-								Ai0XPUEL1Q==
+								FsFFbJrDvHBh
+								KxTKeHU94g==
 								</data>
 								<key>Size</key>
-								<integer>75995</integer>
+								<integer>76050</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8020,7 +8020,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-11T15:34:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8089,8 +8089,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LH1gq6PKtDr8
-								qrabOAk5ww==
+								JzdyV0+2w78q
+								h1Mf+nUd3w==
 								</data>
 								<key>Size</key>
 								<integer>67510</integer>
@@ -8632,7 +8632,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-11T15:34:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8991,11 +8991,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wz+WyZQ5stjd
-								SjL5/NCLpA==
+								dV8mloD87NAa
+								SdsBSBkaSw==
 								</data>
 								<key>Size</key>
-								<integer>141017</integer>
+								<integer>141171</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9456,7 +9456,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-11T15:34:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9525,8 +9525,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/OawCl3KTq+Q
-								ygvio+2evA==
+								mBGYenvPi/6W
+								gheFI7XegA==
 								</data>
 								<key>Size</key>
 								<integer>51346</integer>
@@ -12479,7 +12479,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HA9Ay/i5SngAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA9HeIM9bYgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -12490,7 +12490,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD0DL+Ll6KA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD0d4gz3K2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
