updated PC NetSci
updated PC NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T15:34:32Z</date>
+						<date>2019-01-14T13:45:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zaZWwyW5Q7F5
-								b9+XwPPKxA==
+								8SldBjfZfCqV
+								ZHz5ASRAjw==
 								</data>
 								<key>Size</key>
-								<integer>258174</integer>
+								<integer>258210</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8632,7 +8632,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T15:34:32Z</date>
+						<date>2019-01-14T13:45:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8991,11 +8991,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dV8mloD87NAa
-								SdsBSBkaSw==
+								/Wn1w/W0NdU+
+								0gfAM4UdMw==
 								</data>
 								<key>Size</key>
-								<integer>141171</integer>
+								<integer>141207</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11372,7 +11372,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-08T23:08:39Z</date>
+						<date>2019-01-14T13:45:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12411,11 +12411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								850ultq89Zoz
-								a0PftS6Cbg==
+								at/I+PgVC08D
+								cLZRx2tsng==
 								</data>
 								<key>Size</key>
-								<integer>3475</integer>
+								<integer>3512</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12479,7 +12479,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HA9HeIM9bYgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA9mTyjEaugAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -12490,7 +12490,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD0d4gz3K2A
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD2ZPKMSXeA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
