--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T15:34:32Z</date>
+						<date>2019-01-14T13:45:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dV8mloD87NAa
-								SdsBSBkaSw==
+								/Wn1w/W0NdU+
+								0gfAM4UdMw==
 								</data>
 								<key>Size</key>
-								<integer>141171</integer>
+								<integer>141207</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
