Update to include new PC members NetSci
Update to include new PC members NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T13:45:05Z</date>
+						<date>2019-01-14T19:41:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7731,31 +7731,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pje33G5zom1o
-								stIomE+fZA==
+								sL6gPtCsVmtL
+								V7Ol/5LrYw==
 								</data>
 								<key>Size</key>
-								<integer>338759</integer>
+								<integer>338484</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jqxp3Y8aLGCQ
-								rc3f3b+vuw==
+								VB+hM+WxDxa/
+								hHSsp94+wA==
 								</data>
 								<key>Size</key>
-								<integer>32213</integer>
+								<integer>32031</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8SldBjfZfCqV
-								ZHz5ASRAjw==
+								+ISjq307bQBv
+								tI4ayQMT/g==
 								</data>
 								<key>Size</key>
-								<integer>258210</integer>
+								<integer>256254</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8632,7 +8632,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T13:45:05Z</date>
+						<date>2019-01-14T19:41:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8971,31 +8971,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Cqm22a6FxHii
-								P2B+TOm0/A==
+								d5fV9IcJA2TB
+								3qEkrI2Arw==
 								</data>
 								<key>Size</key>
-								<integer>208396</integer>
+								<integer>208121</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8GfTA+oW98kr
-								cVvJMjbSDw==
+								VQCTNQNJ0Fv7
+								Lvh0vA7poQ==
 								</data>
 								<key>Size</key>
-								<integer>29301</integer>
+								<integer>29119</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								/Wn1w/W0NdU+
-								0gfAM4UdMw==
+								jo3/VFWvTCTd
+								l5QfAWIAhg==
 								</data>
 								<key>Size</key>
-								<integer>141207</integer>
+								<integer>139251</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11372,7 +11372,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T13:45:05Z</date>
+						<date>2019-01-14T19:41:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12411,11 +12411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								at/I+PgVC08D
-								cLZRx2tsng==
+								850ultq89Zoz
+								a0PftS6Cbg==
 								</data>
 								<key>Size</key>
-								<integer>3512</integer>
+								<integer>3475</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12479,7 +12479,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HA9mTyjEaugAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA9o7E298RgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -12490,7 +12490,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD2ZPKMSXeA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD2jsTb45eA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
