--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T13:45:05Z</date>
+						<date>2019-01-14T19:41:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,31 +374,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Cqm22a6FxHii
-								P2B+TOm0/A==
+								d5fV9IcJA2TB
+								3qEkrI2Arw==
 								</data>
 								<key>Size</key>
-								<integer>208396</integer>
+								<integer>208121</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8GfTA+oW98kr
-								cVvJMjbSDw==
+								VQCTNQNJ0Fv7
+								Lvh0vA7poQ==
 								</data>
 								<key>Size</key>
-								<integer>29301</integer>
+								<integer>29119</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								/Wn1w/W0NdU+
-								0gfAM4UdMw==
+								jo3/VFWvTCTd
+								l5QfAWIAhg==
 								</data>
 								<key>Size</key>
-								<integer>141207</integer>
+								<integer>139251</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
