NetSci - Took overview schedule down - closed abstracts
NetSci - Took overview schedule down - closed abstracts

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T15:34:32Z</date>
+						<date>2019-01-14T21:10:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jtntMzRdk7tW
-								j8REWAmHvQ==
+								dApUELxJ/y/D
+								TyAgx0xdPA==
 								</data>
 								<key>Size</key>
-								<integer>148558</integer>
+								<integer>138886</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FsFFbJrDvHBh
-								KxTKeHU94g==
+								CAEg+Zv6qUL+
+								UftdO+ODiQ==
 								</data>
 								<key>Size</key>
-								<integer>76050</integer>
+								<integer>63982</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
