--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T15:34:32Z</date>
+						<date>2019-01-14T21:10:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9fzb0h59AuzY
-								MJnRCz3BaQ==
+								Vdm4lq96revb
+								0Iy24r5u7Q==
 								</data>
 								<key>Size</key>
-								<integer>120999</integer>
+								<integer>120496</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mBGYenvPi/6W
-								gheFI7XegA==
+								VMZW36odT5r/
+								UlIthHEAlQ==
 								</data>
 								<key>Size</key>
-								<integer>51346</integer>
+								<integer>51028</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
