--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T19:41:59Z</date>
+						<date>2019-01-14T21:10:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -814,11 +814,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sL6gPtCsVmtL
-								V7Ol/5LrYw==
+								e+wKElId1auX
+								R+2lKnqDbg==
 								</data>
 								<key>Size</key>
-								<integer>338484</integer>
+								<integer>328812</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+ISjq307bQBv
-								tI4ayQMT/g==
+								iMyk8O5zB22Q
+								gByav4l5Ng==
 								</data>
 								<key>Size</key>
-								<integer>256254</integer>
+								<integer>244189</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
